<resources>
    <string name="app_name">MyZing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Thư viện</string>
    <string name="listen_no_advertisement">NGHE NHẠC KHÔNG QUẢNG CÁO</string>
    <string name="zingmp3_plus_package_for_only_19000">Gói ZingMP3 Plus chỉ 19000/tháng</string>
    <string name="discovery">Khám phá</string>
    <string name="profile">Cá nhân</string>
    <string name="hide_list">Danh sách ẩn</string>
    <string name="block_list">Danh sách chặn</string>
    <string name="care_list">Danh sách quan tâm</string>
    <string name="input_code">Nhập Code</string>
    <string name="save_data">Tiết kiệm 3G/4G truy cập</string>
    <string name="services">Dịch vụ</string>
    <string name="high_quality_sound">Âm thanh vượt trội (Lossless)</string>
    <string name="crossfade">Chuyển bài mượt mà (Crossfade)</string>
    <string name="high_experience">Trải nghiệm nghe nhạc nâng cao</string>
    <string name="unlimited_storage">Lưu trữ nhạc không giới hạn</string>
    <string name="listen_and_dowload_lossless_music">Nghe và tải nhạc Lossless</string>
    <string name="listen_music_no_ad">Nghe nhạc không quảng cáo</string>
    <string name="highest_quality_and_no_ad">Nghe nhạc với chất lượng cao nhất, không quảng cáo</string>
    <string name="plus">PLUS</string>
    <string name="upgrade_class">Nâng cấp gói</string>
    <string name="basic">BASIC</string>
    <string name="listen_recently">Nghe gần đây</string>
    <string name="dowloaded">Đã tải</string>
    <string name="artist">Nghệ sỹ</string>
    <string name="premium">PREMIUM</string>
    <string name="price_of_premium">49,000đ</string>
    <string name="create_playlist">Tạo playlist</string>
    <string name="suggestion_for_you">Gợi ý cho bạn</string>
    <string name="rely_on_personal_library">Dựa trên lịch sử và thư viện cá nhân</string>
    <string name="info">Thông tin</string>
    <string name="lyric">Lời bài hát</string>
    <string name="may_be_you_want_to_listen">Có thể bạn muốn nghe</string>
    <string name="mv">MV</string>
    <string name="upload">Upload</string>
    <string name="love_song">Bài hát yêu thích</string>
</resources>