<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".library.LibraryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_vertical_0.03"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_vertical_0.97"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/layout_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_0.03"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_0.97">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_library"
            android:text="@string/library"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ic_mic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ic_search"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_microphone"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/ic_search"
            android:background="@drawable/ic_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_0.03"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_0.97"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        android:padding="8dp"
        android:id="@+id/layout_upgrade_class">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/img_upgrade_class"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/song_background"/>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_listen_no_advertisement"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_upgrade_class"
            app:layout_constraintBottom_toTopOf="@id/tv_zingmp3_plus_package_for_only_19000_vnd"
            android:text="@string/listen_no_advertisement"
            android:textColor="#ff0000"
            android:layout_marginStart="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_zingmp3_plus_package_for_only_19000_vnd"
            app:layout_constraintTop_toBottomOf="@id/tv_listen_no_advertisement"
            app:layout_constraintStart_toEndOf="@id/img_upgrade_class"
            app:layout_constraintBottom_toTopOf="@id/tv_upgrade_now"
            android:text="@string/zingmp3_plus_package_for_only_19000"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_upgrade_now"
            app:layout_constraintTop_toBottomOf="@+id/tv_zingmp3_plus_package_for_only_19000_vnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_upgrade_class"
            android:text="@string/listen_no_advertisement"
            android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/rv_folder"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_0.03"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_0.97"
        app:layout_constraintTop_toBottomOf="@id/layout_upgrade_class"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_listen_recently"
        app:layout_constraintTop_toBottomOf="@+id/rv_folder"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_0.03"
        android:text="Nghe gần đây"
        android:textStyle="bold"
        android:textSize="@dimen/tv_18"
        android:layout_marginTop="15dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/rv_listen_recently"
        app:layout_constraintTop_toBottomOf="@id/tv_listen_recently"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_0.03"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_0.97"/>


</androidx.constraintlayout.widget.ConstraintLayout>